--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:29.0.2'
     implementation 'com.android.support:cardview-v7:29.0.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.deano2390:FlowTextView:2.0.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
