--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".RegistrationActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".LoginActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -21,6 +22,7 @@
                 android:value=".LoginActivity" />
         </activity>
         <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity">
 
         <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -30,6 +32,7 @@
         </activity>
         <activity
             android:name=".DeleteActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".AddActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -39,6 +42,7 @@
         </activity>
         <activity
             android:name=".AddActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -48,6 +52,7 @@
         </activity>
         <activity
             android:name=".AboutActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".DishActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -57,6 +62,7 @@
         </activity>
         <activity
             android:name=".HungryActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
@@ -66,6 +72,7 @@
         </activity>
         <activity
             android:name=".DishActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
